--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -12,233 +12,195 @@
     "# Project 1 - Visualization\n",
     "# Team: Dineen Parker, Dale Legband, Ryan Shuhart\n",
     "\n",
-    "# Python Module\n",
-    "import pandas as pd\n"
+    "# Pandas Module for data manipulation\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\ryan.shuhart\\\\Box Sync\\\\SMU\\\\Class Work\\\\Summer 2016\\\\Data Mining\\\\Project 1 - Visualization\\\\MSDS7331_Project_1'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pwd"
+    "# load the data into memory source: \n",
+    "digit_pxs = pd.read_csv(\"./digit_data/train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Business Understanding (10 points total).\n",
+    "* Describe the purpose of the data set you selected (i.e., why was this data collected in\n",
+    "the first place?). \n",
+    "* Describe how you would define and measure the outcomes from the\n",
+    "dataset. That is, why is this data important and how do you know if you have mined\n",
+    "useful knowledge from the dataset? \n",
+    "* How would you measure the effectiveness of a\n",
+    "good prediction algorithm? Be specific."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://yann.lecun.com/exdb/mnist/index.html <br>\n",
+    "The data comes from kaggle.com digit recognition challenge..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>pixel0</th>\n",
-       "      <th>pixel1</th>\n",
-       "      <th>pixel2</th>\n",
-       "      <th>pixel3</th>\n",
-       "      <th>pixel4</th>\n",
-       "      <th>pixel5</th>\n",
-       "      <th>pixel6</th>\n",
-       "      <th>pixel7</th>\n",
-       "      <th>pixel8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pixel774</th>\n",
-       "      <th>pixel775</th>\n",
-       "      <th>pixel776</th>\n",
-       "      <th>pixel777</th>\n",
-       "      <th>pixel778</th>\n",
-       "      <th>pixel779</th>\n",
-       "      <th>pixel780</th>\n",
-       "      <th>pixel781</th>\n",
-       "      <th>pixel782</th>\n",
-       "      <th>pixel783</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 785 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   label  pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  \\\n",
-       "0      1       0       0       0       0       0       0       0       0   \n",
-       "1      0       0       0       0       0       0       0       0       0   \n",
-       "2      1       0       0       0       0       0       0       0       0   \n",
-       "3      4       0       0       0       0       0       0       0       0   \n",
-       "4      0       0       0       0       0       0       0       0       0   \n",
-       "\n",
-       "   pixel8    ...     pixel774  pixel775  pixel776  pixel777  pixel778  \\\n",
-       "0       0    ...            0         0         0         0         0   \n",
-       "1       0    ...            0         0         0         0         0   \n",
-       "2       0    ...            0         0         0         0         0   \n",
-       "3       0    ...            0         0         0         0         0   \n",
-       "4       0    ...            0         0         0         0         0   \n",
-       "\n",
-       "   pixel779  pixel780  pixel781  pixel782  pixel783  \n",
-       "0         0         0         0         0         0  \n",
-       "1         0         0         0         0         0  \n",
-       "2         0         0         0         0         0  \n",
-       "3         0         0         0         0         0  \n",
-       "4         0         0         0         0         0  \n",
-       "\n",
-       "[5 rows x 785 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# load the data into memory\n",
-    "digit_pxs = pd.read_csv(\"./digit_data/train.csv\")\n",
-    "\n",
-    "\n",
-    "digit_pxs."
+    "# Data Understanding (80 points total)\n",
+    "* [10 points] Describe the meaning and type of data (scale, values, etc.) for each\n",
+    "attribute in the data file."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [15 points] Verify data quality: Explain any missing values, duplicate data, and outliers.\n",
+    "Are those mistakes? How do you deal with these problems? Give justifications for your\n",
+    "methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [10 points] Visualize appropriate statistics (e.g., range, mode, mean, median, variance,\n",
+    "counts) for a subset of attributes. Describe anything meaningful you found from this or if\n",
+    "you found something potentially interesting. Note: You can also use data from other\n",
+    "sources for comparison. Explain why the statistics run are meaningful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [15 points] Visualize the most interesting attributes (at least 5 attributes, your opinion\n",
+    "on what is interesting). Important: Interpret the implications for each\n",
+    "visualization. Explain for each attribute why the chosen visualization is appropriate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [15 points] Visualize relationships between attributes: Look at the attributes via scatter\n",
+    "plots, correlation, cross-tabulation, group-wise averages, etc. as appropriate. Explain\n",
+    "any interesting relationships."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [10 points] Identify and explain interesting relationships between features and the class\n",
+    "you are trying to predict (i.e., relationships with variables and the target classification)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [5 points] Are there other features that could be added to the data or created from\n",
+    "existing features? Which ones?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exceptional Work (10 points total)\n",
+    "* You have free reign to provide additional analyses.\n",
+    "*One idea: implement dimensionality reduction, then visualize and interpret the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
