--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -1,31 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MSDS 7331 - Project 1 - Visualization\n",
+    "## Team: Dineen Parker, Dale Legband, Ryan Shuhart"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# MSDS 7331\n",
-    "# Project 1 - Visualization\n",
-    "# Team: Dineen Parker, Dale Legband, Ryan Shuhart\n",
+    "### Modules Used ###\n",
     "\n",
     "# Pandas Module for data manipulation\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# load the data into memory source: \n",
-    "digit_pxs = pd.read_csv(\"./digit_data/train.csv\")"
+    "import pandas as pd\n",
+    "\n",
+    "# pandas_profiling is a handy tool for inspecting data\n",
+    "# https://github.com/JosPolfliet/pandas-profiling\n",
+    "# pip install pandas-profiling\n",
+    "import pandas_profiling"
    ]
   },
   {
@@ -46,8 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://yann.lecun.com/exdb/mnist/index.html <br>\n",
-    "The data comes from kaggle.com digit recognition challenge..."
+    "http://archive.ics.uci.edu/ml/datasets/default+of+credit+card+clients"
    ]
   },
   {
@@ -63,16 +61,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Understanding (80 points total)\n",
+    "# Data Understanding (80 points total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# load the data into memory source. First row are for reference with headings starting on line 2.\n",
+    "# ID field is use as the index field in the data frame\n",
+    "cc_data = pd.read_excel(\"./cc_data/default of credit card clients.xls\", skiprows=1, index_col='ID')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* [10 points] Describe the meaning and type of data (scale, values, etc.) for each\n",
     "attribute in the data file."
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 30000 entries, 1 to 30000\n",
+      "Data columns (total 24 columns):\n",
+      "LIMIT_BAL                     30000 non-null int64\n",
+      "SEX                           30000 non-null int64\n",
+      "EDUCATION                     30000 non-null int64\n",
+      "MARRIAGE                      30000 non-null int64\n",
+      "AGE                           30000 non-null int64\n",
+      "PAY_0                         30000 non-null int64\n",
+      "PAY_2                         30000 non-null int64\n",
+      "PAY_3                         30000 non-null int64\n",
+      "PAY_4                         30000 non-null int64\n",
+      "PAY_5                         30000 non-null int64\n",
+      "PAY_6                         30000 non-null int64\n",
+      "BILL_AMT1                     30000 non-null int64\n",
+      "BILL_AMT2                     30000 non-null int64\n",
+      "BILL_AMT3                     30000 non-null int64\n",
+      "BILL_AMT4                     30000 non-null int64\n",
+      "BILL_AMT5                     30000 non-null int64\n",
+      "BILL_AMT6                     30000 non-null int64\n",
+      "PAY_AMT1                      30000 non-null int64\n",
+      "PAY_AMT2                      30000 non-null int64\n",
+      "PAY_AMT3                      30000 non-null int64\n",
+      "PAY_AMT4                      30000 non-null int64\n",
+      "PAY_AMT5                      30000 non-null int64\n",
+      "PAY_AMT6                      30000 non-null int64\n",
+      "default payment next month    30000 non-null int64\n",
+      "dtypes: int64(24)\n",
+      "memory usage: 5.7 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cc_data.info()\n",
+    "#profile = pandas_profiling.ProfileReport(cc_data)\n",
+    "#profile.to_file(outputfile=\"./myoutputfile.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
