--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -10,9 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -20,6 +20,9 @@
     "\n",
     "# Pandas Module for data manipulation\n",
     "import pandas as pd\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "\n",
     "\n",
     "# pandas_profiling is a handy tool for inspecting data\n",
     "# https://github.com/JosPolfliet/pandas-profiling\n",
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -96,6 +99,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  PAY_4  \\\n",
+      "ID                                                                         \n",
+      "1       20000    2          2         1   24      2      2     -1     -1   \n",
+      "2      120000    2          2         2   26     -1      2      0      0   \n",
+      "3       90000    2          2         2   34      0      0      0      0   \n",
+      "4       50000    2          2         1   37      0      0      0      0   \n",
+      "5       50000    1          2         1   57     -1      0     -1      0   \n",
+      "\n",
+      "    PAY_5  PAY_6  BILL_AMT1  BILL_AMT2  BILL_AMT3  BILL_AMT4  BILL_AMT5  \\\n",
+      "ID                                                                        \n",
+      "1      -2     -2       3913       3102        689          0          0   \n",
+      "2       0      2       2682       1725       2682       3272       3455   \n",
+      "3       0      0      29239      14027      13559      14331      14948   \n",
+      "4       0      0      46990      48233      49291      28314      28959   \n",
+      "5       0      0       8617       5670      35835      20940      19146   \n",
+      "\n",
+      "    BILL_AMT6  PAY_AMT1  PAY_AMT2  PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  \\\n",
+      "ID                                                                          \n",
+      "1           0         0       689         0         0         0         0   \n",
+      "2        3261         0      1000      1000      1000         0      2000   \n",
+      "3       15549      1518      1500      1000      1000      1000      5000   \n",
+      "4       29547      2000      2019      1200      1100      1069      1000   \n",
+      "5       19131      2000     36681     10000      9000       689       679   \n",
+      "\n",
+      "    default payment next month  \n",
+      "ID                              \n",
+      "1                            1  \n",
+      "2                            1  \n",
+      "3                            0  \n",
+      "4                            0  \n",
+      "5                            0  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 30000 entries, 1 to 30000\n",
       "Data columns (total 24 columns):\n",
@@ -124,12 +158,74 @@
       "PAY_AMT6                      30000 non-null int64\n",
       "default payment next month    30000 non-null int64\n",
       "dtypes: int64(24)\n",
-      "memory usage: 5.7 MB\n"
+      "memory usage: 5.7 MB\n",
+      "None\n",
+      "            LIMIT_BAL           SEX     EDUCATION      MARRIAGE           AGE  \\\n",
+      "count    30000.000000  30000.000000  30000.000000  30000.000000  30000.000000   \n",
+      "mean    167484.322667      1.603733      1.853133      1.551867     35.485500   \n",
+      "std     129747.661567      0.489129      0.790349      0.521970      9.217904   \n",
+      "min      10000.000000      1.000000      0.000000      0.000000     21.000000   \n",
+      "25%      50000.000000      1.000000      1.000000      1.000000     28.000000   \n",
+      "50%     140000.000000      2.000000      2.000000      2.000000     34.000000   \n",
+      "75%     240000.000000      2.000000      2.000000      2.000000     41.000000   \n",
+      "max    1000000.000000      2.000000      6.000000      3.000000     79.000000   \n",
+      "\n",
+      "              PAY_0         PAY_2         PAY_3         PAY_4         PAY_5  \\\n",
+      "count  30000.000000  30000.000000  30000.000000  30000.000000  30000.000000   \n",
+      "mean      -0.016700     -0.133767     -0.166200     -0.220667     -0.266200   \n",
+      "std        1.123802      1.197186      1.196868      1.169139      1.133187   \n",
+      "min       -2.000000     -2.000000     -2.000000     -2.000000     -2.000000   \n",
+      "25%       -1.000000     -1.000000     -1.000000     -1.000000     -1.000000   \n",
+      "50%        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "75%        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "max        8.000000      8.000000      8.000000      8.000000      8.000000   \n",
+      "\n",
+      "              PAY_6      BILL_AMT1      BILL_AMT2     BILL_AMT3  \\\n",
+      "count  30000.000000   30000.000000   30000.000000  3.000000e+04   \n",
+      "mean      -0.291100   51223.330900   49179.075167  4.701315e+04   \n",
+      "std        1.149988   73635.860576   71173.768783  6.934939e+04   \n",
+      "min       -2.000000 -165580.000000  -69777.000000 -1.572640e+05   \n",
+      "25%       -1.000000    3558.750000    2984.750000  2.666250e+03   \n",
+      "50%        0.000000   22381.500000   21200.000000  2.008850e+04   \n",
+      "75%        0.000000   67091.000000   64006.250000  6.016475e+04   \n",
+      "max        8.000000  964511.000000  983931.000000  1.664089e+06   \n",
+      "\n",
+      "           BILL_AMT4      BILL_AMT5      BILL_AMT6       PAY_AMT1  \\\n",
+      "count   30000.000000   30000.000000   30000.000000   30000.000000   \n",
+      "mean    43262.948967   40311.400967   38871.760400    5663.580500   \n",
+      "std     64332.856134   60797.155770   59554.107537   16563.280354   \n",
+      "min   -170000.000000  -81334.000000 -339603.000000       0.000000   \n",
+      "25%      2326.750000    1763.000000    1256.000000    1000.000000   \n",
+      "50%     19052.000000   18104.500000   17071.000000    2100.000000   \n",
+      "75%     54506.000000   50190.500000   49198.250000    5006.000000   \n",
+      "max    891586.000000  927171.000000  961664.000000  873552.000000   \n",
+      "\n",
+      "           PAY_AMT2      PAY_AMT3       PAY_AMT4       PAY_AMT5  \\\n",
+      "count  3.000000e+04   30000.00000   30000.000000   30000.000000   \n",
+      "mean   5.921163e+03    5225.68150    4826.076867    4799.387633   \n",
+      "std    2.304087e+04   17606.96147   15666.159744   15278.305679   \n",
+      "min    0.000000e+00       0.00000       0.000000       0.000000   \n",
+      "25%    8.330000e+02     390.00000     296.000000     252.500000   \n",
+      "50%    2.009000e+03    1800.00000    1500.000000    1500.000000   \n",
+      "75%    5.000000e+03    4505.00000    4013.250000    4031.500000   \n",
+      "max    1.684259e+06  896040.00000  621000.000000  426529.000000   \n",
+      "\n",
+      "            PAY_AMT6  default payment next month  \n",
+      "count   30000.000000                30000.000000  \n",
+      "mean     5215.502567                    0.221200  \n",
+      "std     17777.465775                    0.415062  \n",
+      "min         0.000000                    0.000000  \n",
+      "25%       117.750000                    0.000000  \n",
+      "50%      1500.000000                    0.000000  \n",
+      "75%      4000.000000                    0.000000  \n",
+      "max    528666.000000                    1.000000  \n"
      ]
     }
    ],
    "source": [
-    "cc_data.info()\n",
+    "print(cc_data.head())\n",
+    "print(cc_data.info())\n",
+    "print(cc_data.describe())\n",
     "#profile = pandas_profiling.ProfileReport(cc_data)\n",
     "#profile.to_file(outputfile=\"./myoutputfile.html\")"
    ]
