add CRISP DM link

--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -49,7 +49,7 @@
     "* How would you measure the effectiveness of a\n",
     "good prediction algorithm? Be specific.\n",
     "\n",
-    "From CRISP-DM article:\n",
+    "From CRISP-DM article (https://mineracaodedados.files.wordpress.com/2012/04/the-crisp-dm-model-the-new-blueprint-for-data-mining-shearer-colin.pdf):\n",
     "* What are the measures of success?\n",
     "* Are there any assumptions?\n",
     "* Create a glossary, if needed"
