in class collaboration

--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -597,11 +597,17 @@
     "attribute in the data file.\n",
     "\n",
     "#### Summary Statistics\n",
-    "- Distribution of Defaults (facet plot)\n",
+    "- Distribution of Defaults\n",
     " - by age\n",
     " - by sex\n",
     " - by education\n",
     " - by marriage\n",
+    " - age sex\n",
+    " - age education\n",
+    " - age marriage\n",
+    " - sex education\n",
+    " - sex marriage\n",
+    " - education marriage\n",
     "- Distribution of age\n",
     "- Distribution of sex\n",
     "- Distribution of education<br><br>\n",
@@ -609,17 +615,29 @@
     " - by age\n",
     " - by sex\n",
     " - by education\n",
-    " - by marriage"
+    " - by marriage\n",
+    " \n",
+    " - default rate of no bill balances ever 36.6%\n",
+    " - default rate of only one bill balance for sept 20.7%\n",
+    " - default rate of carrying balances vs never carrying "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\t\tnever_bal\tsomething bal\n",
+    "    \t317\t\t\t6319\n",
+    "\t\t870\t\t\t29130\n",
+    "\t\t\n",
+    "def\t\t0.364367816\t0.216924133\n",
+    "no def\t0.635632184\t0.783075867\n",
+    "\t\t0.57323689\t0.277015475\n",
+    "\t\t\n",
+    "\t\t2.069331649\t"
+   ]
   },
   {
    "cell_type": "code",
@@ -923,21 +941,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exceptional Work (10 points total)\n",
-    "* You have free reign to provide additional analyses.\n",
-    "*One idea: implement dimensionality reduction, then visualize and interpret the results.\n",
-    "\n",
-    "feature creation ideas:\n",
-    "* Age brackets\n",
-    "* Ratio of Pay Amount to Bill Amount\n",
-    "* Ratio of Bill Amount to LIMIT_BAL\n",
-    "* Transformation of data - scaling"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -968,6 +971,21 @@
    "source": [
     "#sns.distplot(cc_data['LIMIT_BAL_range'])\n",
     "sns.violinplot(data=cc_data, x='LIMIT_BAL_range', y=\"AGE\", hue='SEX')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exceptional Work (10 points total)\n",
+    "* You have free reign to provide additional analyses.\n",
+    "*One idea: implement dimensionality reduction, then visualize and interpret the results.\n",
+    "\n",
+    "feature creation ideas:\n",
+    "* Age brackets\n",
+    "* Ratio of Pay Amount to Bill Amount\n",
+    "* Ratio of Bill Amount to LIMIT_BAL\n",
+    "* Transformation of data - scaling"
    ]
   },
   {
