more planning on viz

--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -615,7 +615,7 @@
     " - by age\n",
     " - by sex\n",
     " - by education\n",
-    " - by marriage\n",
+    " - by marriage<br><br>\n",
     " \n",
     " - default rate of no bill balances ever 36.6%\n",
     " - default rate of only one bill balance for sept 20.7%\n",
