add post processed data file

--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -3624,6 +3624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "#### Age by Education and Gender\n",
     "Post high school graduation age appears to be less than high school educated and might be due to taking longer in life to meet certain requirements for a credit card. High School appears to be near bimodal distributions."
    ]
@@ -3727,6 +3728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<HR>\n",
     "#### Limit Balance by AGE\n",
     "There is a positive relation ship of AGE to Credit Limit"
    ]
@@ -3794,6 +3796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "#### Distibution of Default by Credit Limit\n",
     "Those with lower credit limits are more likely to default."
    ]
@@ -6626,6 +6629,25 @@
     " - http://pandas.pydata.org/pandas-docs/stable/index.html\n",
     " - https://www.wakari.io/sharing/bundle/ijstokes/pyvis-1h?has_login=False\n",
     " - https://github.com/mwaskom/seaborn/issues/430\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Output processed file for model selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Interesting https://annalear.ca/2010/06/10/why-excel-thinks-your-csv-is-a-sylk/\n",
+    "cc_data.to_csv('./cc_data/cc_data_processed.csv')"
    ]
   }
  ],
