--- a/MSDS7331_Project_1_Notebook.ipynb
+++ b/MSDS7331_Project_1_Notebook.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -312,7 +312,40 @@
       "\n",
       "LIMIT_BAL_range\n",
       "['0-250k', '>250k-500k', '>500k-750k', '>750k']\n",
-      "\n"
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 30000 entries, 1 to 30000\n",
+      "Data columns (total 27 columns):\n",
+      "LIMIT_BAL                     30000 non-null int64\n",
+      "SEX                           30000 non-null object\n",
+      "EDUCATION                     30000 non-null object\n",
+      "MARRIAGE                      30000 non-null object\n",
+      "AGE                           30000 non-null int64\n",
+      "PAY_0_Sept                    30000 non-null int64\n",
+      "PAY_2_Aug                     30000 non-null int64\n",
+      "PAY_3_July                    30000 non-null int64\n",
+      "PAY_4_June                    30000 non-null int64\n",
+      "PAY_5_May                     30000 non-null int64\n",
+      "PAY_6_April                   30000 non-null int64\n",
+      "BILL_AMT1_Sept                30000 non-null int64\n",
+      "BILL_AMT2_Aug                 30000 non-null int64\n",
+      "BILL_AMT3_July                30000 non-null int64\n",
+      "BILL_AMT4_June                30000 non-null int64\n",
+      "BILL_AMT5_May                 30000 non-null int64\n",
+      "BILL_AMT6_April               30000 non-null int64\n",
+      "PAY_AMT1_Sept                 30000 non-null int64\n",
+      "PAY_AMT2_Aug                  30000 non-null int64\n",
+      "PAY_AMT3_July                 30000 non-null int64\n",
+      "PAY_AMT4_June                 30000 non-null int64\n",
+      "PAY_AMT5_May                  30000 non-null int64\n",
+      "PAY_AMT6_April                30000 non-null int64\n",
+      "default payment next month    30000 non-null int64\n",
+      "AGE_range                     30000 non-null category\n",
+      "LIMIT_BAL_range               30000 non-null category\n",
+      "Default_Yes_No                30000 non-null object\n",
+      "dtypes: category(2), int64(21), object(4)\n",
+      "memory usage: 6.0+ MB\n",
+      "None\n"
      ]
     }
    ],
@@ -325,7 +358,9 @@
     "for i in range(len(cat_vars)):\n",
     "    print(cat_vars[i])\n",
     "    print(sorted(cc_data[cat_vars[i]].unique()))\n",
-    "    print()"
+    "    print()\n",
+    "    \n",
+    "print(cc_data.info())"
    ]
   },
   {
@@ -6640,7 +6675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
